[project]
name = "urbanaccessviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "folium>=0.20.0",
    "matplotlib>=3.10.7",
    "rio-tiler>=7.9.2",
    "starlette>=0.48.0",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.3",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "fiona>=1.10.1",
    "shapely>=2.1.2",
]
